@@ -24,6 +24,8 @@ Release 0.19.4 - Unreleased
                is shutdown
    HBASE-1664  Disable 1058 on catalog tables
    HBASE-1583  Start/Stop of large cluster untenable
+   HBASE-1609  We wait on leases to expire before regionserver goes down.
+               Rather, just let client fail
 
 Release 0.19.3 - May 27th, 2009
   BUG FIXES
